# needle-detection

./: CMakeLists.txt  backup input  backup_after3d.txt  line coefficients  main.cpp
